<resources>
    <array name="activity_item">
        <item>UI</item>
        <item>Intent</item>
        <item>TelephonyMgr</item>
        <item>SmsManager</item>
        <item>AudioMgr</item>
        <item>Vibrator</item>
        <item>Compass</item>
        <item>GPS</item>
        <item>Camera</item>
        <item>Plugin</item>
        <item>Coroutines</item>
        <item>ComposeUI</item>
        <item>AudioRecord</item>
    </array>
    <array name="ui_test_item">
        <item>AutoCompleteTextView</item>
        <item>GridView</item>
        <item>SpinnerGallery</item>
        <item>Toast</item>
        <item>DateTimePicker</item>
        <item>SearchView</item>
        <item>Notification</item>
        <item>PopupWindow</item>
        <item>ActionBar</item>
        <item>ConfigurationAndIntent</item>
        <item>ConstrainLayout</item>
        <item>WebView</item>
        <item>VideoView</item>
        <item>SurfaceView</item>
        <item>ImageSpan</item>
        <item>LocalWebView</item>
        <item>kotlin</item>
        <item>ProgressBar</item>
        <item>Fragment</item>
    </array>
    <array name="auto_complete_arr">
        <item>\&#064;163.com</item>
        <item>\&#064;126.com</item>
        <item>\&#064;qq.com</item>
        <item>\&#064;mail.com</item>
        <item>\&#064;yeah.net</item>
        <item>\&#064;yahoo.com</item>
        <item>\&#064;sina.com</item>
        <item>\&#064;hotmail.com</item>
    </array>
    <array name="test_spinner">
        <item>James Bond</item>
        <item>Jason Bourne</item>
        <item>Bruce Wayne</item>
        <item>Kevin Durant</item>
    </array>
    <array name="search_view_arr">
        <item>abc</item>
        <item>abcabc</item>
        <item>abdabd</item>
        <item>bdebfe</item>
        <item>cdedfsdf</item>
        <item>fsdfimdd</item>
        <item>hinfhinl</item>
    </array>
    <array name="telephony_arr">
        <item>系统平台编号：</item>
        <item>网络运营商：</item>
        <item>所在位置：</item>
        <item>SIM卡国别：</item>
        <item>SIM卡序列号：</item>
    </array>
    <string name="app_name">TestLibProject</string>
    <string name="show_toast">show toast</string>
    <string name="search">search</string>
    <string name="send_no_btn">发送通知</string>
    <string name="cancel_no_btn">取消通知</string>
    <string name="notify_ticker">有新通知</string>
    <string name="notify_title">一条新通知</string>
    <string name="notify_text">升T了升T了升T了！！！</string>
    <string name="popup_window_inside_text1">popup_window_inside_tv1</string>
    <string name="popup_window_inside_text2">popup_window_inside_tv2</string>
    <string name="popup_window_inside_text3">popup_window_inside_tv3</string>
    <string name="actionbar_title1">title1</string>
    <string name="font_10">font_10</string>
    <string name="font_12">font_12</string>
    <string name="font_14">font_14</string>
    <string name="font_16">font_16</string>
    <string name="actionbar_title2">title2</string>
    <string name="font_red">font_red</string>
    <string name="font_green">font_green</string>
    <string name="font_blue">font_blue</string>
    <string name="play_music">play music</string>
    <string name="volume_up">volume up</string>
    <string name="volume_down">volume down</string>
    <string name="mute">mute</string>
    <string name="take_photo">take photo</string>
    <string name="load_jar">load apk file</string>
    <string name="start_activity">start non-registered activity</string>
    <string name="start_plugin_activity">start plugin activity</string>
    <string name="hello_world_string">HELLO_WORLD</string>
    <string name="no_permission_toast_text">未授予权限</string>
    <string name="title_activity_my_compose">MyComposeActivity</string>
</resources>