<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/load_jar_tv"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/load_jar"
            android:textSize="18dp"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/start_activity_tv"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/start_activity"
            android:textSize="18dp"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/start_plugin_activity_tv"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray"
            android:gravity="center"
            android:text="@string/start_plugin_activity"
            android:textSize="18dp"
            tools:ignore="SpUsage" />
    </LinearLayout>
</RelativeLayout>
